hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_empty.php
<?hh

async function f() {
  concurrent {}
}
